2010-12-08 John Wu <John dot Wu at ACM dot org>
	* tests/jrf.cpp: to generate random data based on 20-entry Risk
	Category from Justo Ruiz Ferrer <justo.ruizferrer@endelec.com>
	* tests/scripts/jrf-ckeck.pl, tests/Makefile.am: add tests for
	keyword index based on test data generated by jrf.cpp
	* src/column.cpp: dataFileName neglected to handle the case where
	there are directory separators in the incoming argument dir
	* tests/scripts/jrf-check.pl: change from dos style line break to
	unix style line break to get the tests to run on a linux machine
	* tests/setqgen.cpp:149 generate the file names with subdirectory
	names starting with 0

2010-12-07 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: update ibis::column::dataFileName to check for
	incoming name already containing the column name or index file
	name
	* src/category.h: add class ibis::text::tokenizer as a virtual
	base class for tokenizers
	* src/ikeywords.h, src/ikeywords.cpp: add
	ibis::keywords::tokenizer and ibis::keywords::parseTextFile for
	generating keyword index from text first directly without a
	user-provided term-document list

2010-12-06 John Wu <John dot Wu at ACM dot org>
	* src/ikeywords.h, src/ikeywords.cpp: allow
	ibis::keywords::readKeywords to read keywords with embedded spaces

2010-11-28 John Wu <John dot Wu at ACM dot org>
	* examples/tcapi.c: change buildin to builtin, add a repeat of the
	built-in tests to mimic the test case from Chavdar Kopeov

2010-11-26 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp:3829 change the test condition to avoid
	division by 0 (when density is 1)
	* src/parti.cpp: in function part::updateData check both st_ctime
	and st_mtime (my own windows-based laptop seems to not update
	st_ctime, but st_mtime), reading the metadata files if time stamps
	are the same as previously recorded to allow for quick changes
	within the same second

2010-11-25 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp: in function ibis::tafel::write and